--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,10 @@
 .app {
-    
+    &__note-filter-container {
+        margin-bottom: 30px;
+        margin-right: -15px;
+    }
+}
+
+.create-note-btn {
+    width: 100%;
 }
