--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 .container {
     width: 100%;
     padding: 15px;
@@ -19,10 +23,16 @@
 
 .col-2, .col-10 {
     flex-grow: 1;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 .col-2 {
     flex-grow: 2;
+}
+
+.col-4 {
+    flex-grow: 1;
 }
 
 .col-10 {
