--- a/src/NoteForm/NoteForm.scss
+++ b/src/NoteForm/NoteForm.scss
@@ -1,7 +1,7 @@
 .note-form {
     width: 100%;
     height: 100px;
-    padding-left: 99px;
+
     &__input {
         width: inherit;
         height: inherit;
@@ -11,5 +11,8 @@
         > div {
             margin-right: 5px;
         }
+    }
+    &__btns {
+        margin-top: 20px;
     }
 }
